logs/Slang/generated/hdlconv/hdlconvertor_p297.sv.log
name: hdlconvertor_p297
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p297.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p297.sv:7:17: error: use of undeclared identifier '$past'
    a1: assert(($past(a))); // Illegal: no clock can be inferred
                ^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p297.sv:8:17: error: use of undeclared identifier '$past'
    a2: assert(($past(a,,,@(posedge clock))));
                ^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p297.sv:8:43: error: expected expression
    a2: assert(($past(a,,,@(posedge clock))));
                                          ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p297.sv:9:17: error: use of undeclared identifier '$sampled'
    a3: assert(($sampled (a)));
                ^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p297.sv:11:3: error: language feature not yet supported
  a4: assert property(@(posedge clock)($past(a)));
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
